--- a/FitnessSkillMod/FitnessSkillMod.csproj
+++ b/FitnessSkillMod/FitnessSkillMod.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1714B592-431B-42D6-AD06-0A0307E598C0}</ProjectGuid>
+    <ProjectGuid>{AE3BAF73-809B-4797-82B3-2244630DBE92}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GatheringSkillMod</RootNamespace>
-    <AssemblyName>GatheringSkillMod</AssemblyName>
+    <RootNamespace>FitnessSkillMod</RootNamespace>
+    <AssemblyName>FitnessSkillMod</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -59,8 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GatheringSkillMod.cs" />
-    <Compile Include="Pickable_RPC.cs" />
+    <Compile Include="FitnessSkill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
