- Mod Config Enforcer Requirement/Support - Nexus IDs

--- a/GatheringSkillMod/GatheringSkillMod.csproj
+++ b/GatheringSkillMod/GatheringSkillMod.csproj
@@ -47,6 +47,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\BepInEx\plugins\CropReplant.dll</HintPath>
     </Reference>
+    <Reference Include="ModConfigEnforcer">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\BepInEx\plugins\ModConfigEnforcer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -69,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CropReplantCompatibilityMod.cs" />
+    <Compile Include="GatheringConfig.cs" />
     <Compile Include="GatheringSkillMod.cs" />
     <Compile Include="Pickable_RPC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
