--- a/LoxMod/LoxMod.csproj
+++ b/LoxMod/LoxMod.csproj
@@ -46,6 +46,9 @@
     <Reference Include="BepInEx">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\BepInEx\core\BepInEx.dll</HintPath>
     </Reference>
+    <Reference Include="ModConfigEnforcer">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\BepInEx\plugins\ModConfigEnforcer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -66,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharacterExt.cs" />
+    <Compile Include="LoxConfig.cs" />
     <Compile Include="LoxMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
