Awful hack to make mod config enforcer optional.

--- a/FitnessSkillMod/FitnessSkillMod.csproj
+++ b/FitnessSkillMod/FitnessSkillMod.csproj
@@ -43,9 +43,6 @@
     <Reference Include="BepInEx">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\BepInEx\core\BepInEx.dll</HintPath>
     </Reference>
-    <Reference Include="ModConfigEnforcer">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\BepInEx\plugins\ModConfigEnforcer.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -67,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config\GenericConfigVariable.cs" />
     <Compile Include="FitnessConfig.cs" />
     <Compile Include="FitnessSkill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
